# docs/swagger.json
@@ -11,7 +11,6 @@
     "paths": {
         "/applications/jobPost/{jobPostID}": {
             "get": {
-                "description": "Get applications by job post ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -29,6 +28,19 @@
                         "name": "jobPostID",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "enum": [
+                            "APPLIED",
+                            "INTERVIEWING",
+                            "REJECTED",
+                            "HIRED",
+                            "SHORTLISTED"
+                        ],
+                        "type": "string",
+                        "description": "Progress Status",
+                        "name": "progressStatus",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -762,6 +774,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "progress_status": {
                     "type": "string"
                 },
                 "s3_path": {
